--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@editorjs/list": "^1.9.0",
     "@editorjs/simple-image": "^1.6.0",
     "@excalidraw/excalidraw": "^0.17.3",
+    "@excalidraw/mermaid-to-excalidraw": "^1.1.0",
+    "@google/generative-ai": "^0.21.0",
     "@kinde-oss/kinde-auth-nextjs": "^2.1.15",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -27,13 +29,19 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tailwindcss/forms": "^0.5.7",
     "@types/editorjs__header": "^2.6.3",
+    "@types/pako": "^2.0.3",
+    "@zsviczian/mermaid-to-excalidraw": "^0.2.0-obsidian-3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "convex": "^1.10.0",
     "lucide-react": "^0.344.0",
+    "mermaid": "^11.4.0",
     "moment": "^2.30.1",
+    "nanoid": "^5.0.8",
     "next": "14.1.1",
     "next-themes": "^0.2.1",
+    "openai": "^4.71.1",
+    "pako": "^2.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-resizable-panels": "^2.0.12",
